--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+    "build": "vite build",
+    "dev": "vite",
+    "postinstall": "php artisan optimize && php artisan migrate --force"
     },
+    
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
@@ -16,5 +18,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "^4.9.5"
     }
 }
